# Graphitti-v2

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.in  README.md  graphitti-cmake-vs22.cpp  graphitti-cmake-vs22.h  vcpkg.json
3p/: CMakeLists.txt
3p/veque/: CMakeLists.txt
graphitti/main/inc/: simulator.hpp
graphitti/main/src/: main.cpp
graphitti/test_directory/: CMakeLists.txt
graphitti/test_directory/core/src/: core_test.cpp
input/configs/911/test-small-911/: config.json
simulator/main/inc/: simulator.hpp
simulator/main/src/: main.cpp
simulator/test_directory/core/: CMakeLists.txt
simulator/test_directory/core/inc/: core_test.hpp
